# stroids

./: .gitignore  Cargo.toml  README.md  index.html
assets/: CREDITS  config.toml
assets/space_shooter/: CREDITS
scripts/: dev_server.sh
src/: app.rs  collision.rs  config.rs  input.rs  kinematics.rs  lib.rs  loading.rs  meteor.rs  player.rs  projectile.rs  ship.rs  sounds.rs  splash.rs  viewport.rs
src/include_data/: default_config.toml
src/player/: components.rs  plugin.rs  systems.rs
