[package]
name = "stroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# enable only a small amount of optimization in dev mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in release mode, and use LTO
[profile.release]
opt-level = 's'
lto = "thin"

[dependencies]
bevy = "0.10.1"
serde = "1.0.160"
wasm-bindgen = "0.2.84"
