[package]
name = "stroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# enable only a small amount of optimization in dev mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in release mode, and use LTO
[profile.release]
opt-level = 's'
lto = "thin"

[dependencies]
bevy = { version = "0.10.1", features = ["subpixel_glyph_atlas"] }
bevy-inspector-egui = "0.18.3"
clap = { version = "4.2.5", features = ["derive"] }
serde = "1.0.160"
toml = "0.7.3"
wasm-bindgen = "0.2.84"
